Fixed homepage logos not aligned correctly

--- a/src/components/Home/Games/Games.scss
+++ b/src/components/Home/Games/Games.scss
@@ -7,10 +7,11 @@
   flex-direction: row;
   justify-content: center;
   align-items: stretch;
-  a{
+  a {
     text-decoration: none;
     color: inherit;
     font-size: inherit;
+    padding: 5%;
   }
   .gameCell > div {
     margin: 0 2%;
